--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- include_bottom.xml 字符串资源 end -->
     <!-- common start -->
     <string name="error_net">当前网络不可用，请检查网络配置</string>
-    <string name="error_server">服务器异常，请稍后再试...</string>
+    <string name="error_server">获取数据错误，请稍后再试...</string>
     <!-- common end -->
     <!--  login activity start-->
     <string name="et_hint_user_login">请输入账号</string>
